--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>DonationAcknowledgementService</members>
+        <members>DonationAcknowledgementServiceTest</members>
         <name>ApexClass</name>
     </types>
     <types>
@@ -19,6 +20,14 @@
     <types>
         <members>Opportunity.Bulk_Ack_Button</members>
         <name>WebLink</name>
+    </types>
+    <types>
+        <members>EnhancedDonationAcknowledgements</members>
+        <name>EmailFolder</name>
+    </types>
+    <types>
+        <members>EnhancedDonationAcknowledgements/TempDonationAck</members>
+        <name>EmailTemplate</name>
     </types>
     <version>60.0</version>
 </Package>
