--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -26,7 +26,8 @@
         <name>EmailFolder</name>
     </types>
     <types>
-        <members>EnhancedDonationAcknowledgements/TempDonationAck</members>
+        <members
+    >EnhancedDonationAcknowledgements/StaticDonationAcknowledgement</members>
         <name>EmailTemplate</name>
     </types>
     <version>60.0</version>
