--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>DonationAcknowledgementService</members>
+        <members>DonationAcknowledgementServiceImpl</members>
         <members>DonationAcknowledgementServiceTest</members>
         <name>ApexClass</name>
     </types>
