Refactor: Phase 2 - Implement Command pattern
- Create IAcknowledgementCommand interface for polymorphic command execution
- Add AcknowledgementCommandOutputs class with EmailPrepOutput, SendOutput, UpdateOutput
- Implement OpportunityValidationCommand for opportunity filtering and validation
- Implement EmailPreparationCommand for SingleEmailMessage preparation
- Implement EmailSendCommand for email sending with exception handling
- Implement DatabaseUpdateCommand for acknowledgment date updates
- Implement ResultAggregationCommand for final result compilation
- Replace monolithic sendEmailsCoreDetailed method with command orchestration
- Update package.xml with all new command classes

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>AcknowledgementCommandOutputs</members>
+        <members>DatabaseUpdateCommand</members>
         <members>DonationAcknowledgementService</members>
         <members>DonationAcknowledgementServiceImpl</members>
         <members>DonationAcknowledgementServiceTest</members>
+        <members>EmailPreparationCommand</members>
+        <members>EmailSendCommand</members>
+        <members>IAcknowledgementCommand</members>
+        <members>OpportunityValidationCommand</members>
+        <members>ResultAggregationCommand</members>
         <name>ApexClass</name>
     </types>
     <types>
