Inject OrgWideEmailService for testability
- Create OrgWideEmailService & interface
- Create MockOrgWideEmailService for testing
- Inject OrgWideEmailService into EmailPreparationCommand
- Write tests

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -18,6 +18,9 @@
         <members>OpportunityValidationCommandTest</members>
         <members>ResultAggregationCommand</members>
         <members>ResultAggregationCommandTest</members>
+        <members>IOrgWideEmailService</members>
+        <members>OrgWideEmailService</members>
+        <members>MockOrgWideEmailService</members>
         <name>ApexClass</name>
     </types>
     <types>
