feat: Phase 1 - Add IEmailService interface and SalesforceEmailService implementation
- Introduced IEmailService interface in interfaces/ to abstract email sending logic.
  - Defines sendEmails(List<Messaging.SingleEmailMessage>) method for bulk email sending.
  - Includes documentation and metadata file with API version and Salesforce XML reference.
- Added SalesforceEmailService class in services/ as the production implementation of IEmailService.
  - Implements sendEmails using Messaging.sendEmail with error handling and logging.
  - Includes metadata file with API version and Salesforce XML reference.
- Updated manifest/package.xml to include IEmailService and SalesforceEmailService for deployment.
- No changes to existing business logic or tests at this stage.
- This phase establishes the foundation for dependency injection and future mocking of email sending in tests.

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -14,6 +14,7 @@
         <members>EmailSendCommand</members>
         <members>EmailSendCommandTest</members>
         <members>IAcknowledgementCommand</members>
+        <members>IEmailService</members>
         <members>OpportunityValidationCommand</members>
         <members>OpportunityValidationCommandTest</members>
         <members>ResultAggregationCommand</members>
@@ -21,6 +22,7 @@
         <members>IOrgWideEmailService</members>
         <members>OrgWideEmailService</members>
         <members>MockOrgWideEmailService</members>
+        <members>SalesforceEmailService</members>
         <name>ApexClass</name>
     </types>
     <types>
