--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -22,6 +22,7 @@
         <members>IOrgWideEmailService</members>
         <members>OrgWideEmailService</members>
         <members>MockOrgWideEmailService</members>
+        <members>MockEmailService</members>
         <members>SalesforceEmailService</members>
         <name>ApexClass</name>
     </types>
