test: testable email sending w/ dep injection
- Introduced IEmailService interface (moved to classes/interfaces/) to
allow for dependency injection
- Implemented EmailService wrapping Messaging.sendEmail and error handling.
- Added MockEmailService with configuration and verification helpers
- Updated EmailSendCommand to use IEmailService instance for dependency injection
- Refactored EmailSendCommand to use a mutable instance variable for IEmailService
- Updated all test methods in EmailSendCommandTest.cls
- Added or updated MockEmailService verification helpers
- package.xml and metadata files

Documented in `docs/instance-based-refactor-plan.md`

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -21,6 +21,9 @@
         <members>IOrgWideEmailService</members>
         <members>OrgWideEmailService</members>
         <members>MockOrgWideEmailService</members>
+        <members>IEmailService</members>
+        <members>EmailService</members>
+        <members>MockEmailService</members>
         <name>ApexClass</name>
     </types>
     <types>
